kubernetes/development/openvscode-server/auth-middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-openvscode-server
spec:
  basicAuth:
    secret: openvscode-server-middleware-basic-auth
