kubernetes/development/openvscode-server/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier-openvscode-server
  namespace: development
spec:
  plugin:
    sablier:
      group: openvscode-server
      dynamic:
        displayName: Open VSCode Server
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier:10000
      sessionDuration: 3h
