kubernetes/development/openvscode-server/openvscode-server.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: openvscode-server
  namespace: development
  labels:
    app: openvscode-server
    sablier.enable: "true"
    sablier.group: openvscode-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openvscode-server
  template:
    metadata:
      labels:
        task: development
        app: openvscode-server
    spec:
      priorityClassName: development-priority
      containers:
      - name: openvscode-server
        ports:
        - containerPort: 3000
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          privileged: true
        image: registry.registry.svc.cluster.local:5000/openvscode-server:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c"]
        args:
        - /init.sh
        resources:
          requests:
            memory: "1Gi"
            cpu: "512m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
        volumeMounts:
          # - name: openvscode-server-data-volume
          #   mountPath: /home/workspace
          - name: openvscode-server-home-volume
            mountPath: /home
          - name: openvscode-server-init
            mountPath: /init.sh
            subPath: init.sh
          - name: install-tools
            mountPath: /install-tools.sh
            subPath: install-tools.sh
      volumes:
        # - name: openvscode-server-data-volume
        #   persistentVolumeClaim:
        #     claimName: openvscode-server-data-claim
        - name: openvscode-server-home-volume
          persistentVolumeClaim:
            claimName: openvscode-server-home-claim
        - name: openvscode-server-init
          configMap:
            name: openvscode-server-init
            items:
            - key: init.sh
              path: init.sh
            defaultMode: 0755
        - name: install-tools
          configMap:
            name: install-tools
            items:
            - key: install-tools.sh
              path: install-tools.sh
            defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: openvscode-server
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: openvscode-server

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvscode-server-https
  namespace: development
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"    
    traefik.ingress.kubernetes.io/router.middlewares: "development-sablier-openvscode-server@kubernetescrd,development-auth-openvscode-server@kubernetescrd"
spec:
  tls:
  - secretName: openvscode-server-bas-tls
  rules:
  - host: code.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openvscode-server
            port:
              number: 80
